40: avoid duplicates in /issue, added aggregation endpoints
