# internal/models/envelope.go
@@ -62,6 +62,9 @@ type EnvelopeEventCommon struct {
 	EnvelopeKey         string               `json:"-"`
 	Project             *Project             `json:"project"`
 	ProjectID           *uint                `json:"ProjectID"`
+	ExceptionType       string               `json:"exception_type" gorm:"type:text;index:idx_exception_type_value"`
+	ExceptionValue      string               `json:"exception_value" gorm:"type:text;index:idx_exception_type_value"`
+	ExceptionData       string               `json:"exception_data" gorm:"type:jsonb"`
 }
 
 type EnvelopeRequestType struct {
